# My-Copy-of-SJSU-VCU

./: README.md
dev/test/: pyproject.toml
dev/test/sre_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dev/test/sre_test/cli/: main.py  test_commands.py
dev/test/sre_test/core/: __init__.py  config.py  environment.py  hil_mapping.py  path.py  response.py
dev/test/sre_test/hil/: .gitignore  README.md  __init__.py
dev/test/sre_test/hil/cli/: __init__.py  main.py
dev/test/sre_test/hil/core/: __init__.py  can_interface.py  dbc_loader.py  efficiency.py  hil_environment.py  hil_state_machine.py  mcm.py  param_injector.py  param_reader.py  power_limit.py  receive_data.py  send_data.py
dev/test/sre_test/hil/dbcs/: 10.03.25_LC_Main.dbc  10.22.25_SRE_Main.dbc
dev/test/sre_test/hil/tests/: test_power_limit_unit.py  test_power_limit_virtual_bus.py
dev/test/sre_test/sil/: __init__.py
dev/test/sre_test/sil/build_main_sil (retained)/: extract_struct_members.py  parse_values.c  parse_values.h  plot_results.py
dev/test/sre_test/sil/cli/: REFACTORING.md  __init__.py  console.py  csv_mappings.py  efficiency_commands.py  main.py  test_commands.py
dev/test/sre_test/sil/config/: PL_config.json  TorqueEncoder_config.json  struct_members_output.json
dev/test/sre_test/sil/core/: __init__.py  compiler.py  sil_environment.py  simulator.py  struct_parser.py
dev/test/sre_test/sil/inc (retained)/: IO_Driver_sil.c  cstart_sil.c
dev/test/sre_test/tests/: __init__.py  conftest.py  test_efficiency.py  test_power_limit.py  test_regen.py
(+189 files in other folders)
